--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -78,7 +78,7 @@ body:
         - Management
         - Customer
   - type: dropdown
-    id: Love_Sucks
+    id: love
     attributes:
       label: Love Sucks
       multiple: true
