--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -5,13 +5,19 @@ on:
     types: [opened]
 
 jobs: 
-  auto_project:
+  call_on_item_open:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code.
         uses: actions/checkout@v4
-        with: 
-          sparse-checkout: .github
+
+      - name: Deploy Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '21'
+
+      - name: Node Clean Install
+        run: npm ci
 
       - name: Access PR Body as JSON
         uses: stefanbuck/github-issue-parser@v3
@@ -21,4 +27,13 @@ jobs:
 
       - name: Log PR Body
         run: cat ${HOME}/issue-parser-result.json
+
+      - name: Extract Issue Thing
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { getProjectInfo } = await import('${{ github.workspace }}/.github/scripts/pr.js')
+
+            await getProjectInfo()
+
 
