--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -34,6 +34,6 @@ jobs:
           script: |
             const { getProjectInfo } = await import('${{ github.workspace }}/.github/scripts/pr.js')
 
-            await getProjectInfo()
+            await getProjectInfo({github})
 
 
