--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Extract Issue Thing
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.PROJECT_PAT_TOKEN }}
           script: |
             const { getProjectInfo } = await import('${{ github.workspace }}/.github/scripts/pr.js')
 
