--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "type": "module",
-  "devDependencies": {
-    "@graphql-eslint/eslint-plugin": "^3.20.1",
-    "dotenv": "^16.4.5",
-    "graphql-config": "^5.1.3",
-    "eslint": "^8.57.1",
-    "@types/node": "^22.7.4",
-    "@typescript-eslint/parser": "^8.8.1",
-    "eslint-config-mdcs": "^5.0.0",
-    "eslint-plugin-import": "^2.31.0",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.8.1"
-  }
+    "name": "github-test",
+    "version": "1.0.0",
+    "description": "index.js",
+    "scripts": {},
+    "author": "",
+    "type": "module",
+    "devDependencies": {
+        "@graphql-eslint/eslint-plugin": "^3.20.1",
+        "dotenv": "^16.4.5",
+        "graphql-config": "^5.1.3",
+        "eslint": "^8.57.1",
+        "@types/node": "^22.7.4",
+        "@typescript-eslint/parser": "^8.8.1",
+        "eslint-config-mdcs": "^5.0.0",
+        "eslint-plugin-import": "^2.31.0",
+        "typescript": "^5.6.2",
+        "typescript-eslint": "^8.8.1"
+    }
 }
