--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -2,7 +2,7 @@ name: Modify Pull Request
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, synchronize]
 
 jobs: 
   call_on_item_open:
