--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -28,25 +28,25 @@ jobs:
       - name: Log PR Body
         run: cat ${HOME}/issue-parser-result.json
       
-      - name: Extract Issue Project ID
+      - name: Extract Issue Project ID and Project Fields
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.PROJECT_PAT_TOKEN }}
           script: |
-            const { getIssueItemID } = await import('${{ github.workspace }}/.github/scripts/pr.js')
-            const variables = {
+            const path = '${{ github.workspace }}/.github/scripts/;
+            const { getIssueItemID, getProjectFieldIDs } = await import(`${path}/pr.js`)
+            const itemIDVars = {
               issueNumber: 37,
             }
 
-            await getIssueItemID({github, variables})
+            const prID = ${{github.event.pull_request.node_id}}
+            console.log(prID)
 
-      - name: Extract Issue Fields
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.PROJECT_PAT_TOKEN }}
-          script: |
-            const { getProjectFieldIDs } = await import('${{ github.workspace }}/.github/scripts/pr.js')
+            const projectItemID = await getIssueItemID({github, itemIDVars});
+            const { priorityFieldID, sizeFieldID, departmentFieldID } = await getProjectFieldIDs({github});
 
-            await getProjectFieldIDs({github})
+
+
+
 
 
