--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -34,7 +34,7 @@ jobs:
           github-token: ${{ secrets.PROJECT_PAT_TOKEN }}
           script: |
             const path = '${{ github.workspace }}/.github/scripts/;
-            const { getIssueItemID, getProjectFieldIDs } = await import(`${path}pr.js`)
+            const { getIssueItemID, getProjectFieldIDs } = await import('${{ github.workspace }}/.github/scripts/pr.js')
 
             const prID = '${{github.event.pull_request.id}}'
             console.log(prID);
@@ -44,8 +44,8 @@ jobs:
               issueNumber: 37,
             }
 
-            const projectItemID = await getIssueItemID({github, itemIDVars});
-            const { priorityFieldID, sizeFieldID, departmentFieldID } = await getProjectFieldIDs({github});
+            //const projectItemID = await getIssueItemID({github, itemIDVars});
+            //const { priorityFieldID, sizeFieldID, departmentFieldID } = await getProjectFieldIDs({github});
 
 
 
