--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -33,10 +33,9 @@ jobs:
         with:
           github-token: ${{ secrets.PROJECT_PAT_TOKEN }}
           script: |
-            const path = '${{ github.workspace }}/.github/scripts/;
             const { getIssueItemID, getProjectFieldIDs } = await import('${{ github.workspace }}/.github/scripts/pr.js')
 
-            const prID = '${{github.event.pull_request.id}}'
+            //const prID = '${{github.event.pull_request.id}}'
             console.log(prID);
 
 
