--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -39,11 +39,14 @@ jobs:
               getProjectFieldIDs 
             } = await import('${{ github.workspace }}/.github/scripts/pr.js')
 
+            const { projectID, priorityFieldID, sizeFieldID, departmentFieldID } = await getProjectFieldIDs({github});
+
             // Get pull request id
             const prID = '${{github.event.pull_request.node_id}}'
             console.log(`Pull Request ID: ${prID}`);
 
             const addItemToProjectVariables = {
+              project: projectID,
               item: prID
             };
 
@@ -55,7 +58,6 @@ jobs:
             }
 
             const projectItemID = await getIssueItemID({github, issueItemIDVariables});
-            const { priorityFieldID, sizeFieldID, departmentFieldID } = await getProjectFieldIDs({github});
 
 
 
