--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -35,7 +35,7 @@ jobs:
           script: |
             const { 
               addItemToProject, 
-              getIssueItemID, 
+              getIssueItemInfo, 
               getProjectFieldIDs 
             } = await import('${{ github.workspace }}/.github/scripts/pr.js')
 
