--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -59,7 +59,7 @@ jobs:
             const prItemID = await addItemToProject( { github }, addItemToProjectVariables )
             console.log(`Pull Request Project Item ID: ${prItemID}`);
 
-            const issueNumber = getIssueNumberFromPRBody(${{steps.issue-parser.outputs.issueparser_priority }})
+            const issueNumber = getIssueNumberFromPRBody("${{steps.issue-parser.outputs.issueparser_priority }}")
 
             if (issueNumber === 0) {
 
